sumo/tests/dfrouter/errors/detector_files/broken_detectors_file_warn/detector_defs.dfrouter
<?xml version="1.0"?>

<!-- generated on 08/08/12 10:36:21 by SUMO dfrouter Version dev-SVN-rUNKNOWN
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.sf.net/xsd/dfrouterConfiguration.xsd">

    <input>
        <net-file value="input_messstrecke.net.xml"/>
        <detector-files value="input_messstrecke.det.xml"/>
    </input>

    <output>
        <detector-output value="detectors_def.det.xml"/>
    </output>

    <processing>
        <ignore-invalid-detectors value="true"/>
    </processing>

</configuration>
-->

<detectors>
    <detectorDefinition id="MQ11Fs2" lane="ErnstRuska2O_1" pos="5.00" type="sink"/>
    <detectorDefinition id="MQ12Fs1" lane="ErnstRuska2W_0" pos="-5.00" type="sink"/>
    <detectorDefinition id="MQ12Fs2" lane="ErnstRuska2W_1" pos="-5.00" type="sink"/>
</detectors>
